[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "landingai-ade>=1.6.0",
    "langchain==0.1.20",
    "langchain-community==0.0.38",
    "langchain-core==0.1.52",
    "langchain-openai==0.1.7",
    "matplotlib>=3.10.8",
    "paddleocr>=3.4.0",
    "paddlepaddle==3.0.0",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
